--- a/Assignment2/Components/Pages/Counter.razor
+++ b/Assignment2/Components/Pages/Counter.razor
@@ -1,6 +1,8 @@
 ﻿@page "/counter"
+<div class="d-flex justify-content-center">
+    <h1>Flight Finder</h1>
+</div>
 
-<h1>Counter</h1>
 
 <p role="status">Current count: @currentCount</p>
 
