Added razor components for reservation page

--- a/Assignment2/Components/Pages/FindFlightRes.razor
+++ b/Assignment2/Components/Pages/FindFlightRes.razor
@@ -1,6 +1,9 @@
 ﻿@page "/FindFlightRes"
 @using System
 @using Assignment2.Data
+@using Microsoft.Maui.Storage
+@using System.IO
+@using System.Text.Json
 
 <div class="d-flex justify-content-center">
     <h3>Flight Finder</h3>
