Updated reservation manager for additional input fields, updated find flight component to reduce some error messages.

--- a/Assignment2/Components/Pages/FindFlightRes.razor
+++ b/Assignment2/Components/Pages/FindFlightRes.razor
@@ -62,7 +62,7 @@
 
 @code {
 
-    public string from, to, day, foundFlightCode, foundFlightAirline, foundFlightDay, foundFlightTime, reservationName, reservationCitizenship;
+    public string? from, to, day, foundFlightCode, foundFlightAirline, foundFlightDay, foundFlightTime, reservationName, reservationCitizenship;
     public double foundFlightCost;
     public string[] flightData = Assignment2.Properties.Resources.flights.Split('\n');
     public List<Flight> flights = new List<Flight>(), foundFlights = new List<Flight>();
